[project]
name = "griptape_nodes_sam_audio_library"
version = "0.1.0"
description = "SAM Audio integration for Griptape Nodes"
authors = [
    {name = "Griptape, Inc.", email = "hello@griptape.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
